--- a/demo/index.html
+++ b/demo/index.html
@@ -13,9 +13,6 @@
         <script src="/hr-time.js"></script>
     </head>
     <body>
-        <h1>hr-time.js</h1>
-        <h2>Simple human-readable timestamps</h2>
-        
         <section>
             <h3>Demo</h3>
             <input type="date" id="date-input">
@@ -28,11 +25,16 @@
             var updateHRTime = function(){
                 timestamp = new HRTime(new Date(dateInput.value + " " + timeInput.value));
                 updateDisplay();
-            }
+            };
 
             var updateDisplay = function(){
-                outputElem.textContent = timestamp.time + " " + timestamp.unit + "s ago";
-            }
+                var suffix = "ago";
+                if (timestamp.future === true) {
+                    suffix = "from now";
+                }
+                
+                outputElem.textContent = timestamp.time + " " + timestamp.unit + "s " + suffix;
+            };
 
             var timestamp;
 
